--- a/src/main/resources/melting-snow-blocks.mixins.json
+++ b/src/main/resources/melting-snow-blocks.mixins.json
@@ -1,14 +1,16 @@
 {
-	"required": true,
-	"package": "dk.bertola.meltingsnowblocks.mixin",
-	"compatibilityLevel": "JAVA_17",
-	"mixins": [
-		"ExampleMixin"
-	],
-	"injectors": {
-		"defaultRequire": 1
-	},
-	"overwrites": {
-		"requireAnnotations": true
+  "required": true,
+  "package": "dk.bertola.meltingsnowblocks.mixin",
+  "compatibilityLevel": "JAVA_17",
+  "mixins": [
+    "BlocksMixin",
+    "SnowBlockAbstractMixin",
+    "SnowBlockMixin"
+  ],
+  "injectors": {
+    "defaultRequire": 1
+  },
+  "overwrites": {
+    "requireAnnotations": true
 	}
 }
