--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ loom_version=1.11-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.1
-maven_group=dk.bertola.meltingsnowblocks
-archives_base_name=melting-snow-blocks
+maven_group=dk.bertola.improvedsnowmelting
+archives_base_name=improved-snow-melting
 
 # Dependencies
 fabric_version=0.92.6+1.20.1
