--- a/src/main/resources/melting-snow-blocks.mixins.json
+++ b/src/main/resources/melting-snow-blocks.mixins.json
@@ -1,8 +1,10 @@
 {
   "required": true,
-  "package": "dk.bertola.meltingsnowblocks.mixin",
+  "package": "dk.bertola.improvedsnowmelting.mixin",
   "compatibilityLevel": "JAVA_17",
-  "mixinextras": {"minVersion": "0.5.0"},
+  "mixinextras": {
+    "minVersion": "0.5.0"
+  },
   "mixins": [
     "BlocksMixin",
     "SnowBlockAbstractMixin",
